<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aho_background">

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginTop="312dp"
        android:background="@color/aho_button_white"
        android:bottomLeftRadius="50dp"
        android:onClick="onClickYes"
        android:text="@string/yes_exit"
        android:textColor="@color/aho_background_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginTop="312dp"
        android:background="@color/aho_background_blue"
        android:bottomLeftRadius="50dp"
        android:onClick="onClickNo"
        android:text="@string/no_exit"
        android:textColor="@color/aho_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:radius="8dp"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/aho_background_white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>