<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_problems_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/aho_background_white">

    <include
        android:id="@+id/include6"
        layout="@layout/app_bar_my_problems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/problem_my"
                android:textColor="@color/aho_background"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="348dp"
                android:layout_height="36dp"
                android:layout_marginTop="64dp"
                android:text="@string/my_problems"
                android:textAlignment="textStart"
                android:textColor="@color/aho_background"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.412"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:layout_marginTop="136dp"
                android:background="@color/aho_button_white"
                android:bottomLeftRadius="50dp"
                android:onClick="onClickAll"
                android:text="@string/all_my_problems"
                android:textColor="@color/aho_background_white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button10"
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="32dp"
                android:background="@color/aho_button_white"
                android:bottomLeftRadius="50dp"
                android:onClick="onClickClose"
                android:text="@string/close_my_problems"
                android:textColor="@color/aho_background_white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/button9"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button9"
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:layout_marginTop="136dp"
                android:background="@color/aho_button_white"
                android:bottomLeftRadius="50dp"
                android:onClick="onClickOpen"
                android:text="@string/open_my_problems"
                android:textColor="@color/aho_background_white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.455"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/button"
                android:layout_width="344dp"
                android:layout_height="54dp"
                android:layout_marginTop="550dp"
                android:background="@color/aho_button_white"
                android:bottomLeftRadius="50dp"
                android:onClick="onClickExit"
                android:text="@string/exit_my_problems"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/ListViewProblems"
                android:layout_width="379dp"
                android:layout_height="340dp"
                android:layout_marginTop="196dp"
                android:background="@color/aho_background_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>